k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app-blue
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
      version: blue
  template:
    metadata:
      labels:
        app: ecommerce
        version: blue
    spec:
      containers:
      - name: ecommerce
        image: ctesthoodiniprojconreg.azurecr.io/ecommerce-app:v1
        ports:
        - containerPort: 3000
