k8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-app-green
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce
      version: green
  template:
    metadata:
      labels:
        app: ecommerce
        version: green
    spec:
      containers:
      - name: ecommerce
        image: ctesthoodiniprojconreg.azurecr.io/ecommerce-app:v1
        ports:
        - containerPort: 3000
