k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce
    version: blue
  ports:
    - port: 80
      targetPort: 3000
